--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "travelogue": "~2.0.1",
     "hapi": "~4.1.4",
     "yar": "~2.1.0",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "joi": "~4.2.0"
   }
 }
