--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hapi": "~4.1.4",
     "yar": "~2.1.0",
     "passport-local": "~1.0.0",
-    "joi": "~4.2.0"
+    "joi": "~4.2.0",
+    "jade": "~1.3.1"
   }
 }
