--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "yar": "~2.1.0",
     "passport-local": "~1.0.0",
     "joi": "~4.2.0",
-    "jade": "~1.3.1"
+    "jade": "~1.3.1",
+    "bcrypt-nodejs": "0.0.3",
+    "mongoose": "~3.8.9"
   }
 }
